# Esprit-cli

./: .gitignore  ACTION_REQUIRED.md  CONTRIBUTING.md  Makefile  README.md  SETUP_GUIDE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: auth.py  config.py
backend/app/models/: schemas.py
backend/app/services/: llm_service.py  sandbox_service.py  usage_service.py
cli/: .gitignore  esprit.spec  pyproject.toml
cli/esprit/agents/: base_agent.py  state.py
cli/scripts/: build.sh
containers/: Dockerfile
esprit/interface/: main.py  tui.py  utils.py
esprit/runtime/: docker_runtime.py
esprit/telemetry/: tracer.py
esprit/tools/: executor.py
homebrew-esprit/: README.md
homebrew-esprit/Formula/: esprit.rb
infrastructure/: Makefile
infrastructure/terraform/: api_gateway.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  s3.tf  secrets.tf  terraform.tfvars.example  variables.tf  vpc.tf
strix/interface/: main.py
web/: App.tsx  README.md  THEME_EXPORT.md  index.html  metadata.json  package-lock.json  package.json  theme-export.json
web/auth/: AuthCallback.tsx  GitHubCallback.tsx  LoginPage.tsx  SignupPage.tsx
web/dashboard/: Billing.tsx  Charts.tsx  Dashboard.tsx  DashboardLayout.tsx  Pentest.tsx  RecentActivity.tsx  ScanDetail.tsx  Scans.tsx  Settings.tsx  StatCards.tsx
web/landing/: LandingPage.tsx
web/lib/: ProtectedRoute.tsx  auth-context.tsx  supabase.ts
(+32 files in other folders)
